src/scss/custom.scss
$body-bg: #000;

@import '~bootstrap/scss/bootstrap.scss';

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
      sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    width: 100%;
    height: 100%;
    background-image: url('../images/bg.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
  }



/* Header */

.border-circle {
    border: 2px solid #FFF;
    border-radius: 100%;
}


/* Earth */ 

@media screen and (max-width: 720px) {
  .w-25 {
    width: 50% !important;
  }
}


/* Mars */

#mars {
  background-image: url('https://cdn.futura-sciences.com/buildsv6/images/largeoriginal/1/b/b/1bb29fb84b_106480_mars-rouge-ok.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
}

@media screen and (max-width: 720px) {
  #mars {
    background-size: cover;
    background-attachment: scroll;
  }
}

.no-bg {
  background-color: transparent !important;
  color: #FFF;
}

.input-bg {
  background-color: transparent !important;
  color: #FFF;
}

.input-bg:focus {
  background-color: transparent !important;
  color: #FFF;
  border-color: #FFF;
  box-shadow: none;
}

.light-box:hover {
  box-shadow: rgba(255, 255, 255, 0.4) -5px 5px, 
  rgba(255, 255, 255, 0.3) -10px 10px, 
  rgba(255, 255, 255, 0.2) -15px 15px, 
  rgba(255, 255, 255, 0.1) -20px 20px, 
  rgba(255, 255, 255, 0.05) -25px 25px;
}


/* NavBar */ 

.nav-hover {
  padding-bottom: 0.3em;
}
  .nav-hover:hover {
    padding-bottom: 0;
    border-bottom: 0.3em solid #FFF;
  }


.icon-rotation {
  -webkit-animation: spin 6s linear infinite;
  -moz-animation: spin 6s linear infinite;
  animation: spin 6s linear infinite;
}

@-moz-keyframes spin {
  100% {
    -moz-transform: rotate(360deg);
  }
}
@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}
@keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360%);
  }
}

.icon-transform {
  transition-duration: 1.2s;
  transition-property: transform;
}

.icon-transform:hover {
  transform: rotate(360deg);
  -webkit-transform: rotate(360deg);
}


/* Footer */ 

.icon-hover {
  color: #CFCFCF;
}

  .icon-hover:hover {
  color: #fff;
}

#footer {
  ul {
    list-style: none;
  }
}

